--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,24 @@
-version: "3.7"
+version: '3.5'
 services:
-  app:
-    build:
-      context: ./
-      dockerfile: Dockerfile
-    depends_on:
-      - db
-      - nginx
-    image: php
-    container_name: php-app-service
-    restart: unless-stopped
-    working_dir: /var/www/
+  php8.2:
+    build: .
+    container_name: social-media-app
     volumes:
-      - ./:/var/www
-    environment:
-      DB_HOST: db
-      DB_PORT: 3306
-      DB_DATABASE: social_client
-      DB_USERNAME: han
-      DB_PASSWORD: secret
-      DB_WRITE_HOST: db
-      DB_READ_HOST: db
-    networks:
-      - socialmedia
-
-  db:
-    image: mysql:8.0.33
-    container_name: mysql-database
-    restart: unless-stopped
+      - "./:/var/www/html"
     ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: social_client
-      MYSQL_USER: han
-      MYSQL_PASSWORD: secret
-    volumes:
-      - mysqldata:/var/lib/mysql
-    networks:
-      - socialmedia
+      - "80:80"
 
-  nginx:
-    image: nginx:alpine
-    container_name: nginx-web-server
-    restart: unless-stopped
-    ports:
-      - 8000:80
+  database:
+    image: mysql:8
+    container_name: mysql
     volumes:
-      - ./:/var/www
-      - ./docker-compose/nginx/default.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - socialmedia
+      - db-data:/var/lib/mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: demo
+      MYSQL_USER: demo
+      MYSQL_PASSWORD: demo 
 
   phpmyadmin:
     image: phpmyadmin
@@ -59,19 +27,17 @@ services:
     ports:
       - 8888:80
     links:
-      - db
+      - database
     environment:
-      PMA_HOST: db
-      PMA_PORT: 3306      
-      MYSQL_USER: han     
-      MYSQL_PASSWORD: secret 
+      PMA_HOST: database 
+      PMA_PORT: 3306
       UPLOAD_LIMIT: 3000M
-    networks:
-      - socialmedia
 
-networks:
-  socialmedia:
-    driver: bridge
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
 
 volumes:
-  mysqldata: {}
+  db-data: {}
